# dotfiles

./: .gitconfig  .gitignore  .gitmodules  .profile  .stow-local-ignore  .zshrc  AGENTS.md  Brewfile  README.md  devbox.json  dump  install.sh  setup  setup-windows.ps1  sync.sh  uninstall.sh  vscode-extensions
.agents/: .skill-lock.json  instructions.md  mcp-config.json
.agents/profiles/: README.md  dotfiles.md  fast.md  genius.md
.agents/skills/: obsidian-bases
.claude/: settings.json
.claude/agents/: dotfiles.md  fast.md  (+1 more)
.config/: starship.toml
.copilot/: copilot-instructions.md  global-memory.json  mcp-config.json  settings.json
.docker/: config.json
.gitconfig.d/: basf.gitconfig  personal.gitconfig
.github/: copilot-instructions.md
.husky/: pre-commit
.ssh/: basf_git.pub  config  personal_git.pub
codex-config/: config.toml
devbox-global/: devbox.json
docs/: agent-tiers.md
functions/: gum.sh  utils.sh
k9s-config/: config.yaml  plugins.yaml
node-global/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
npm-global/: package-lock.json  package.json
python-global/: pyproject.toml
scripts/: check-agent-adapters.sh  devbox-initial-setup.sh  devbox-setup.sh  generate-agent-adapters.sh  homebrew-config-dump.sh  homebrew-setup.sh  k9s-setup.sh  macos-setup.sh  vscode-config-dump.sh  vscode-setup.sh  vscode_install_extensions.sh  zsh-setup.sh
vscode/: keybindings.json  settings.json
vscode-user-config/: keybindings.json  mcp.json  settings.json
windows/: .wslconfig
zsh/: .zshrc  .zshrc.basf  .zshrc.personal  .zshrc.sadpe  .zshrc.sk
(+52 files in other folders)
