[project]
name = "python-global"
version = "0.0.0"
description = "Global Python packages managed via dotfiles"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "cadquery>=2.7.0",
    "git-filter-repo>=2.47.0",
    "markitdown[pptx]>=0.1.5",
    "pillow>=12.2.0",
    "pyrender>=0.1.45",
    "scrapling[all]>=0.4.7",
    "trimesh>=4.12.2",
]
